--- a/Propaganda/css/index.css
+++ b/Propaganda/css/index.css
@@ -700,7 +700,7 @@
 
 
 /* phone */
-@media(max-width: 750px){
+@media( max-width: 750px ) and (min-width: 330px){
     .header{
         width: 100%;
         height: 520px;
@@ -925,6 +925,8 @@
     
     .header .user{
         float: right;
+        width: 45%;
+        margin-top: 5px;
         display: none;
     }
     .header .user li{
@@ -937,6 +939,9 @@
         color: #fff;
         font-size: 16px;
         
+    }
+    .header .user li:last-child{
+        margin-right: 0;
     }
     .header .user li a{
         color: #fff;
